# video-upscaling

./: .dockerignore  .env.temp  .env.temporary  .gitignore  README.md  docker-compose.yaml
back/: alembic.ini  entrypoint.sh
back/src/: config.py  main.py
back/src/api/: videos.py
back/src/databases/: db_helper.py
backend/: .air.toml  .dockerignore  .env.temp  Dockerfile  Makefile  go.mod  go.sum  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_04_19_2149-2f7a4cb51608_add_uuid.py
backend/cmd/: handlers.go  main.go  routes.go  server.go
backend/cmd/api/: main.go  routes.go  server.go  videos.go
backend/cmd/internal/aws/: s3_storage.go
backend/cmd/internal/database/: models.go  videos.go
backend/cmd/internal/env/: env.go
backend/cmd/internal/grpc/: client.go
backend/cmd/migrate/: main.go
backend/cmd/migrate/migrations/: 000001_create.down.sql
backend/internal/aws/: s3_storage.go
backend/internal/config/: config.go
backend/internal/database/: conn.go  database.go  models.go
backend/internal/kafka/: conn.go  wirter.go
backend/internal/redis/: conn.go
backend/internal/rest/: rest.go
backend/internal/storage/: buckets.go  conn.go  storage.go
backend/internal/utils/: extract_audio.go  get_resolution.go  processor.go  transcode.go  utils.go  worker.go
backend/migrations/: 20250906142308_create_table_videos.up.sql  20250921100921_create_table_languages.down.sql  20250921100921_create_table_languages.up.sql  20250921102247_create_table_qualities.down.sql  20250921102247_create_table_qualities.up.sql  20250921102620_update_videos_language_qualities.down.sql  20250921102620_update_videos_language_qualities.up.sql  20250921143724_insert_qualities.down.sql  20250921143724_insert_qualities.up.sql  20251012150148_create_tables.down.sql  20251012150148_create_tables.up.sql  20251012150722_insert_languages.down.sql  20251012150722_insert_languages.up.sql
backend/src/: __init__.py
backend/src/api/: __init__.py  crud.py  dependencies.py  schemas.py
backend/src/aws/: __init__.py  s3_storage.py
backend/src/databases/: __init__.py  base.py  video.py
backend/src/utils/: handler.py  video_pool.py  video_processing.py
frontend/: .env.production  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/public/locales/en/: translation.json
frontend/public/locales/ru/: translation.json
frontend/src/app/: index.tsx
frontend/src/app/layouts/DefaultLayout/: DefaultLayout.tsx
frontend/src/app/providers/: AppRouter.tsx
frontend/src/entities/video/api/: index.ts  type.ts
frontend/src/entities/video/lib/: mapper.ts
frontend/src/entities/video/model/: type.ts
frontend/src/features/video/: index.ts
frontend/src/features/video/hooks/: useFetchVideo.tsx  useRecentVideos.tsx  useUploadVideo.tsx
frontend/src/pages/: index.ts
frontend/src/pages/home/: index.ts
frontend/src/pages/home/ui/: index.tsx
frontend/src/pages/not-found/: index.ts
frontend/src/pages/not-found/ui/: index.tsx
frontend/src/pages/player/: index.ts
frontend/src/pages/player/ui/: index.tsx
frontend/src/shared/config/i18next/: index.tsx
frontend/src/shared/hooks/: useMediaQuery.ts
frontend/src/shared/styles/: _variables.scss
frontend/src/shared/ui/: index.ts
frontend/src/widgets/Header/: index.tsx
processor/: .dockerignore  .env.temp  Dockerfile  config.py  main.py  pyproject.toml
processor/models/upscale/: 2Dx2.onnx
processor/src/: audio_processing.py  s3_storage.py  video_processing.py
video_processing/: audio_processing.py  pyproject.toml
video_processor/: Dockerfile  config.py  main.py  pyproject.toml
video_processor/src/: audio_processing.py  db.py  s3_storage.py  video_processing.py
(+11 files in other folders)
